--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-Danial dige Khar nist!!!!!
-<h1>barbod barman dogholoo haye afsaneE :))</h1>
-<h2 style="color:red;"> anha bache haye besiar doost dashtani hastand ke nadia ra kheili doost darand </h2>
+IN FAGHAT  YEK TEST AST!!!!
+
 
