--- a/index.html
+++ b/index.html
@@ -1,3 +1,18 @@
-<h1>IN FAGHAT  YEK TEST AST!!!!</h1>
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Rubik+Lines&display=swap" rel="stylesheet">
 
-
+    </head>
+    <body>
+        <div class="content-wrapper">
+            <h1>Danial </h1>
+            <h2>Is The best Brother In The Word.</h2>
+            <!-- <input type="text" placeholder="Write Something"> -->
+            <button class="click-btn">click Here!</button>
+        </div>
+    </body>
+</html>
