--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
     <head>
         <link rel="stylesheet" href="style.css">
@@ -15,4 +15,4 @@
             <button class="click-btn">click Here!</button>
         </div>
     </body>
-</html>
+</html> -->
