--- a/index.html
+++ b/index.html
@@ -8,11 +8,6 @@
 
     </head>
     <body>
-        <div class="content-wrapper">
-            <h1>Danial </h1>
-            <h2>Is The best Brother In The Word.</h2>
-            <!-- <input type="text" placeholder="Write Something"> -->
-            <button class="click-btn">click Here!</button>
-        </div>
+        <h1>Hello-world!</h1>
     </body>
 </html> -->
